--- a/BankApp.SPA/projects/spa/src/app/layout/sidenav/client-selector/client-selector.component.scss
+++ b/BankApp.SPA/projects/spa/src/app/layout/sidenav/client-selector/client-selector.component.scss
@@ -10,7 +10,7 @@
 .client-option {
   display: grid;
   line-height: 1.2rem;
-  padding: 0px 2px;
+  padding: 0 2px;
 }
 
 .ant-form-item {
