--- a/BankApp.SPA/projects/spa/src/app/layout/sidenav/sidenav.component.scss
+++ b/BankApp.SPA/projects/spa/src/app/layout/sidenav/sidenav.component.scss
@@ -10,8 +10,8 @@
   flex: 1;
   padding: 20px 0;
   justify-items: center;
-  box-shadow: inset 0px -20px 24px 0px var(--color-secondary),
-              inset 0px 20px 24px 0px var(--color-secondary);
+  box-shadow: inset 0 -20px 24px 0 var(--color-secondary),
+              inset 0 20px 24px 0 var(--color-secondary);
 }
 
 .user-info {
